--- a/css/home.css
+++ b/css/home.css
@@ -16,8 +16,9 @@ h1 {
   
 .slideshow-container img {
     height: 600px;
-    border-radius: 10px;
+    border-radius: 20px;
     width: 100%;
+    z-index: 0;
 }
 
 /* Hide the images by default */
@@ -33,7 +34,7 @@ h1 {
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
+  color: black;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -71,7 +72,6 @@ h1 {
   position: absolute;
   top: 0;
 }
-
  
 /* The dots/bullets/indicators */
 .dots {
@@ -104,72 +104,3 @@ h1 {
   to {opacity: 1}
 }
 
-/** COOKIES**/
-
-.cookie-consent-banner {
-  position: fixed;
-  bottom: 0px;
-  left: 0;
-  z-index: 2147483645;
-  box-sizing: border-box;
-  width: 100%;
-}
-  
-.cookie-consent-banner__inner {     
-  width: 100%;
-  height: fit-content;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #3A4649;
-}
-  
-.cookie-consent-banner__copy { 
-  margin-bottom: 16px;
-  padding: 20px;
-  text-align: left;
-}
-  
-.cookie-consent-banner__actions {   
-  padding: 10px; 
-}
-
-.cookie-consent-banner__header {
-  margin-bottom: 8px;
-  font-family: "CeraPRO-Bold", sans-serif, arial;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 24px;
-  color: #F1F6F4;
-}
-
-.cookie-consent-banner__description {
-  font-family: "CeraPRO-Regular", sans-serif, arial;
-  font-weight: normal;
-  color: #838F93;
-  font-size: 16px;
-  line-height: 24px;
-}
-
-.cookie-consent-banner__cta {
-  box-sizing: border-box;
-  display: inline-block;
-  min-width: 164px;
-  padding: 11px 13px;        
-  border-radius: 2px;
-  background-color: #2CE080;
-  color: #FFF;
-  text-decoration: none;
-  text-align: center;
-  font-family: "CeraPRO-Regular", sans-serif, arial;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.cookie-consent-banner__cta:hover {
-  background-color: #20BA68;
-}
-
-.cookie-consent-banner__cta:last-child {
-  margin-left: 10px;
-}
