--- a/css/main.css
+++ b/css/main.css
@@ -246,9 +246,10 @@ footer p {
 
 }
 
-.middle .madbyit-site-common img{
-    height: 500px;
-    width: 500px;
+.madbyit-site-common img{
+    height: 300px;
+    width: 300px;
+    z-index: 0;
 }
 
 
@@ -277,7 +278,76 @@ footer p {
     display: block;
 }
 
+/** COOKIES**/
+
+.cookie-consent-banner {
+    position: fixed;
+    bottom: 0px;
+    left: 0;
+    z-index: 2147483645;
+    box-sizing: border-box;
+    width: 100%;
+  }
     
+  .cookie-consent-banner__inner {     
+    width: 100%;
+    height: fit-content;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #3A4649;
+  }
+    
+  .cookie-consent-banner__copy { 
+    margin-bottom: 16px;
+    padding: 20px;
+    text-align: left;
+  }
+    
+  .cookie-consent-banner__actions {   
+    padding: 10px; 
+  }
+  
+  .cookie-consent-banner__header {
+    margin-bottom: 8px;
+    font-family: "CeraPRO-Bold", sans-serif, arial;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    color: #F1F6F4;
+  }
+  
+  .cookie-consent-banner__description {
+    font-family: "CeraPRO-Regular", sans-serif, arial;
+    font-weight: normal;
+    color: #838F93;
+    font-size: 16px;
+    line-height: 24px;
+  }
+  
+  .cookie-consent-banner__cta {
+    box-sizing: border-box;
+    display: inline-block;
+    min-width: 164px;
+    padding: 11px 13px;        
+    border-radius: 2px;
+    background-color: #2CE080;
+    color: #FFF;
+    text-decoration: none;
+    text-align: center;
+    font-family: "CeraPRO-Regular", sans-serif, arial;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+  }
+  
+  .cookie-consent-banner__cta:hover {
+    background-color: #20BA68;
+  }
+  
+  .cookie-consent-banner__cta:last-child {
+    margin-left: 10px;
+  }
+      
 
 /** SMALL SCREEN ADJUSTMENTS **/
 
