--- a/css/home.css
+++ b/css/home.css
@@ -26,33 +26,6 @@ h1 {
   display: none;
 }
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 45%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: black;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-  
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(100, 100, 100, 0.8);
-}
-
 /* Caption text */
 .text {
   color: #f2f2f2;
@@ -88,11 +61,11 @@ h1 {
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-  
-.active, .dot:hover {
+
+.active {
   background-color: #717171;
 }
-  
+
   /* Fading animation */
 .fade {
   animation-name: fade;
